# CMakeDebian

./: .gitignore  CMakeLists.txt  Linux-XilinxBoard-enterprise-image.cmake  README.md  build.sh  configure.sh  getVersionPackage.sh  install-dotnetcore_2.2.6.sh
backend/: CMakeLists.txt  my-dotnet-app
resources/: CMakeLists.txt  my.service.in
resources/CPack_scripts/: conffiles  postinst  prerm
